[tool.poetry]
name = "adventofcode2024"
version = "0.1.0"
description = ""
authors = ["Morgan Kan <heraldk@gmail.com>"]
readme = "README.md"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]

[tool.poetry.dependencies]
python = "3.12"
ruff = "0.8.4"
pytest = "7.4.3"
tqdm = "4.67.1"

[tool.pytest.ini_options]
pythonpath = "adventofcode2024"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
